<?xml version="1.0"?>
<package format="2">
  <name>pubsub_gen_example</name>
  <version>0.0.0</version>
  <description>The pubsub_gen_example package</description>
  <maintainer email="example@example.com">Makito Ishikura</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
